- Stars in the gui or now colored gold
- Added recording of dps/healing at end of dungeon (not in gui yet). Only works with the details addon enabled

0.4.8-beta changelog:
- Added option to export success rate to chat in GUI
- Added max and min deaths to filters
- Backend changes