@@ -88,9 +88,9 @@ local function getDungeonTime(dungeon, timetextcolor)
         local limit = dungeon.keyDetails.timeLimit or 0
         if completed then
             if time < (limit * 0.6) then
-                stars = symbol..symbol..symbol
+                stars = symbol .. symbol .. symbol
             elseif time < (limit * 0.8) then
-                stars = symbol..symbol
+                stars = symbol .. symbol
             else
                 stars = symbol
             end
@@ -99,9 +99,21 @@ local function getDungeonTime(dungeon, timetextcolor)
     s = KeyCount.util.colorText(s, timetextcolor.chat)
     if stars then
         local starsColored = KeyCount.util.colorText(stars, KeyCount.defaults.colors.gold.chat)
-        s = s..starsColored
+        s = s .. starsColored
     end
     return s
+end
+
+local function getPlayerDps(dungeon)
+    local player = dungeon.player
+    local party = KeyCount.util.convertOldPartyFormat(dungeon.party)
+    local data = party[player] or {}
+    local damage = data["damage"] or {}
+    local dps = damage["dps"] or 0
+    if dps > 0 then
+        return KeyCount.util.formatK(dps)
+    end
+    return ""
 end
 
 local function prepareRowList(dungeon)
@@ -113,12 +125,13 @@ local function prepareRowList(dungeon)
     local deaths = dungeon.totalDeaths or 0
     local time = getDungeonTime(dungeon, result.color)
     local date = KeyCount.util.convertOldDateFormat(dungeon.date)
+    local dps = KeyCount.util.safeExec("GetPlayerDps", getPlayerDps, dungeon)
     local affixes = KeyCount.util.concatTable(dungeon.keyDetails.affixes, ", ")
     local p = getPlayerRoleAndColor(dungeon)
     local playerString = string.format("%s%s", p.roleIcon, player)
     --@debug@
-    Log(string.format("prepareRowList: [%s] [%s] [%s] [%s] [%s] [%s] [%s]", player, name, level, result.result, deaths,
-        time, date.date))
+    Log(string.format("prepareRowList: [%s] [%s] [%s] [%s] [%s] [%s] [%s] [%s]", player, name, level, result.result,
+        deaths, time, date.date, dps))
     --@end-debug@
     table.insert(row, { value = playerString, color = p.color })
     table.insert(row, { value = name })
@@ -126,7 +139,7 @@ local function prepareRowList(dungeon)
     table.insert(row, { value = result.result, color = rgb(result.color.rgb) })
     table.insert(row, { value = deaths, color = getDeathsColor(deaths) })
     table.insert(row, { value = time })
-    --table.insert(row, { value = time, color = result.color })
+    table.insert(row, { value = dps })
     table.insert(row, { value = date.date })
     table.insert(row, { value = affixes })
     return { cols = row }
